# jsquabble

./: README.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/jsquabble/: main.py  main_fastapi.py  main_graphene.py
docs/: 3rdpartylicenses.txt  404.html  index.html  main.3e44433e99477eea17a6.js  main.6090a6db6cc7a2527eca.js  main.cc0efd6921351d9512aa.js  polyfills.360124b709e5febdc156.js  polyfills.360124b709e5febdc156.js.map  styles.3bee2ca82c9fecc50f76.css  styles.3bee2ca82c9fecc50f76.css.map  styles.7fa747dbd49566d18890.css
jsquabble/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
jsquabble/e2e/src/: app.e2e-spec.ts
jsquabble/src/: index.html  styles.scss
jsquabble/src/app/: answer.ts  app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  errors.service.ts  game.service.ts  gdoc.service.ts  graphql.module.ts  package.json  persistent-state.service.ts
jsquabble/src/app/answer/: answer.component.html  answer.component.ts
jsquabble/src/app/master/: master.component.html  master.component.scss  master.component.ts
jsquabble/src/app/navbar/: navbar.component.html  navbar.component.ts
jsquabble/src/app/welcome/: welcome.component.html  welcome.component.ts
